add Word,Sentence and Paragraph classes

--- a/EpamTask2/EpamTask2.csproj
+++ b/EpamTask2/EpamTask2.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassesFolder\Paragraph.cs" />
+    <Compile Include="ClassesFolder\Sentence.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ClassesFolder\Word.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
